WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311032
REGRESSION(
310087@main
): [GStreamer] Introduced 3 new layout test failures/timeouts
https://bugs.webkit.org/show_bug.cgi?id=311032
Summary
REGRESSION(310087@main): [GStreamer] Introduced 3 new layout test failures/ti...
Carlos Alberto Lopez Perez
Reported
2026-03-29 13:55:19 PDT
The following layout tests are timing out on WPE and GTK since
310087@main
Regressions: Unexpected text-only failures (1) imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-removetrack.https.html [ Failure ] Regressions: Unexpected timeouts (2) media/media-fragments/TC0009.html [ Timeout ] media/media-fragments/TC0014.html [ Timeout ] The diff on the failure is: --- /sdk/webkit/layout-test-results/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-removetrack.https-expected.txt +++ /sdk/webkit/layout-test-results/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-removetrack.https-actual.txt @@ -7,6 +7,6 @@ PASS Tests that a removal from a MediaStream works as expected -PASS Test that removal from a MediaStream fires ended on media elements (video first) +FAIL Test that removal from a MediaStream fires ended on media elements (video first) assert_equals: got video ended event expected true but got false FAIL Test that removal from a MediaStream fires ended on media elements (audio first) assert_equals: audio element ended because no more audio tracks expected true but got false Note: I have double checked this: reverting
310087@main
locally makes this test pass back again
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-03-30 00:45:54 PDT
Why was this not detected by EWS?
Philippe Normand
Comment 2
2026-03-30 04:45:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61682
Alicia Boya García
Comment 3
2026-03-30 09:30:56 PDT
(In reply to Philippe Normand from
comment #1
)
> Why was this not detected by EWS?
I had a conversation with Claudio about this. Currently the EWS is very conservative about reporting errors and will not report any tests that don't fail consistently in both runs. When the EWS ran, the tests were reported as flaky and therefore ignored.
https://ews-build.webkit.org/#/builders/34/builds/117975
Changes just landed to try to be less conservative, with the hope that that is feasible now that the bots are greener, but this is still being currently experimented.
https://github.com/WebKit/WebKit/commit/471453201b4f4770ce4eb2edb0539c8ff2cb4066
EWS
Comment 4
2026-03-31 09:44:56 PDT
Committed
310318@main
(84afeac1a2e5): <
https://commits.webkit.org/310318@main
> Reviewed commits have been landed. Closing PR #61682 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2026-03-31 09:45:15 PDT
<
rdar://problem/173789590
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug