REGRESSION(310087@main): [GStreamer] Introduced 3 new layout test failures/timeouts https://bugs.webkit.org/show_bug.cgi?id=311032

Reviewed by Alicia Boya Garcia.

The tests were timing out since 310087@main because the ready and network states were no longer
properly updated once EOS state has been reached.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::MediaPlayerPrivateGStreamer):
(WebCore::MediaPlayerPrivateGStreamer::changePipelineState):
(WebCore::MediaPlayerPrivateGStreamer::updateStates):
(WebCore::MediaPlayerPrivateGStreamer::didEnd):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/310318@main